--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "track-events",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@types/prop-types": "^15.7.4",
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "@vitejs/plugin-react": "^1.0.7",
-    "eslint": "^8.11.0",
-    "eslint-plugin-react": "^7.29.3",
-    "sass": "^1.49.9",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0"
-  }
+    "name": "track-events",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build-app": "tsc && vite build",
+        "build-cs": "tsc --skipLibCheck dist/content_scripts.ts &&  rm dist/content_scripts.ts",
+        "build": "rm -rf dist && npm run build-app && npm run build-cs",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@types/prop-types": "^15.7.4",
+        "prop-types": "^15.8.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "rimraf": "^3.0.2",
+        "vite-tsconfig-paths": "^3.4.1"
+    },
+    "devDependencies": {
+        "@types/chrome": "^0.0.179",
+        "@types/react": "^17.0.33",
+        "@types/react-dom": "^17.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.14.0",
+        "@typescript-eslint/parser": "^5.14.0",
+        "@vitejs/plugin-react": "^1.0.7",
+        "eslint": "^8.11.0",
+        "eslint-plugin-react": "^7.29.3",
+        "sass": "^1.49.9",
+        "typescript": "^4.5.4",
+        "vite": "^2.8.0"
+    }
 }
