--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.6.0",
+        "@types/es6-promise": "^3.3.0",
         "@types/prop-types": "^15.7.4",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
@@ -26,8 +30,10 @@
         "@vitejs/plugin-react": "^1.0.7",
         "eslint": "^8.11.0",
         "eslint-plugin-react": "^7.29.3",
+        "eslint-plugin-react-hooks": "^4.4.0",
         "sass": "^1.49.9",
-        "typescript": "^4.5.4",
-        "vite": "^2.8.0"
+        "typescript": "^4.6.3",
+        "vite": "^2.8.0",
+        "vite-plugin-fonts": "^0.3.0"
     }
 }
