--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
         "default_title": "Open the popup"
     },
     "icons": {},
-    "permissions": ["activeTab"],
+    "permissions": ["activeTab", "scripting"],
     "content_scripts": [{
         "matches": ["http://*/*", "https://*/*"],
         "exclude_matches": ["http://localhost/*", "https://localhost/*"],
