--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
+        "@material-ui/core": "^4.12.4",
         "@mui/material": "^5.6.0",
         "@types/es6-promise": "^3.3.0",
         "@types/prop-types": "^15.7.4",
